resolved smell stream.tolist